@@ -18,6 +18,7 @@ package io.aiven.kafka.connect.common.output;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -61,7 +62,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithValue() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding));
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
 
@@ -90,7 +91,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithOneFieldAndValue() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -104,7 +105,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void multiStringJsonValueWithOneFieldAndValue() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -116,12 +117,12 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
         final String expected = "[{\"value\":{\"name\":\"John\"},\"key\":\"key0\"},"
             + "{\"value\":{\"name\":\"Pekka\"},\"key\":\"key0\"}]";
 
-        assertRecords(List.of(record1, record2), expected);
+        assertRecords(Arrays.asList(record1, record2), expected);
     }
 
     @Test
     void jsonValueWithAllMetadata() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding),
             new OutputField(OutputFieldType.OFFSET, noEncoding),
             new OutputField(OutputFieldType.TIMESTAMP, noEncoding),
@@ -143,7 +144,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMultipleHeaders() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.HEADERS, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -174,7 +175,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMissingKey() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Schema level1Schema = SchemaBuilder.struct().field("name", Schema.STRING_SCHEMA);
@@ -189,7 +190,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMissingTimestamp() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.TIMESTAMP, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Schema level1Schema = SchemaBuilder.struct().field("name", Schema.STRING_SCHEMA);
@@ -204,7 +205,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMissingHeader() throws IOException {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.HEADERS, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -218,7 +219,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void failedIfLastRecordIsMissing() {
-        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding));
+        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
 
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -227,7 +228,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
         final SinkRecord record1 = createRecord("key0", level1Schema, struct1, 1, 1000L);
         final SinkRecord record2 = createRecord("key0", level1Schema, struct2, 1, 1000L);
 
-        assertThatThrownBy(() -> useWithWrongLastRecord(List.of(record1, record2)))
+        assertThatThrownBy(() -> useWithWrongLastRecord(Arrays.asList(record1, record2)))
             .isInstanceOf(JsonParseException.class);
     }
 
